gcc/testsuite/rust/rustc/ui/module-macro_use-arguments.rs
#[macro_use(foo, bar)] // { dg-error "" "" { target *-*-* } }
mod foo {
}

fn main() {
}

